updated contact page

--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
                 <label for="subject">Subject*</label>
                 <input type="text" name="subject" id="subject-field">
 
-                <label for="message-field">Message*</label>
+                <label for="message">Message*</label>
                 <textarea name="message" id="message-field" cols="40" rows="10" maxlength="400"></textarea>
                 <p class="small-text">400 characters max</p>
 
