--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li>
                     <a href="extras.html">
                         <img src="Resources/suitcase-solid.svg" alt="suitcase icon" width="24px">
-                        Extras
+                        Projects
                     </a>
                 </li>
                 <li>
