--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Portfolio - Extras</title>
+        <title>Portfolio - Projects</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/x-icon" href="user-solid.svg">
         <link rel="stylesheet" href="styles.css">
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="extras.html">
+                    <a href="projects.html">
                         <img src="Resources/suitcase-solid.svg" alt="suitcase icon" width="24px">
                         Projects
                     </a>
@@ -43,7 +43,7 @@
         </nav>
 
         <div id="extras-page">
-            <h1>Extras</h1>
+            <h1>Projects</h1>
             <p class="extras-info">This page is a small collection of some pieces of media that I like.</p>
 
             <div class="extras-grid">
