--- a/skills.html
+++ b/skills.html
@@ -22,7 +22,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="extras.html">
+                    <a href="projects.html">
                         <img src="Resources/suitcase-solid.svg" alt="suitcase icon" width="24px">
                         Projects
                     </a>
