change back to extras

--- a/contact.html
+++ b/contact.html
@@ -22,9 +22,9 @@
                     </a>
                 </li>
                 <li class="nav-button">
-                    <a href="projects.html">
+                    <a href="extras.html">
                         <img src="Resources/suitcase-solid.svg" alt="suitcase icon" width="24px">
-                        Projects
+                        Extras
                     </a>
                 </li>
                 <li class="nav-button">
