--- a/extras.html
+++ b/extras.html
@@ -22,9 +22,9 @@
                     </a>
                 </li>
                 <li>
-                    <a href="projects.html">
+                    <a href="extras.html">
                         <img src="Resources/suitcase-solid.svg" alt="suitcase icon" width="24px">
-                        Projects
+                        Extras
                     </a>
                 </li>
                 <li>
@@ -43,7 +43,7 @@
         </nav>
 
         <div id="extras-page">
-            <h1>Projects</h1>
+            <h1>Extras</h1>
             <p class="extras-info">This page is a small collection of some pieces of media that I like.</p>
 
             <div class="extras-grid">
